--- a/MultiAgentSystem/MultiAgentSystem.csproj
+++ b/MultiAgentSystem/MultiAgentSystem.csproj
@@ -56,7 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModels\BaseAgentViewModel.cs" />
-    <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\MapsAgentViewModel.cs" />
     <Compile Include="ViewModels\ShipAgentViewModel.cs" />
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
