--- a/MultiAgentSystem/MultiAgentSystem.csproj
+++ b/MultiAgentSystem/MultiAgentSystem.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Helpers\Command.cs" />
+    <Compile Include="ServiceManager\FileManager.cs" />
     <Compile Include="ViewModels\BaseAgentViewModel.cs" />
     <Compile Include="ViewModels\MapsAgentViewModel.cs" />
     <Compile Include="ViewModels\ShipAgentViewModel.cs" />
